@@ -1,5 +1,10 @@
 2011-12-16  Jason Merrill  <jason@redhat.com>
 
+	PR c++/51416
+	* g++.dg/cpp0x/auto31.C: New.
+
+2011-12-16  Jason Merrill  <jason@redhat.com>
+
 	PR c++/51331
 	* g++.dg/init/value10.C: New.
 
