@@ -1,5 +1,10 @@
 2011-12-16  Jason Merrill  <jason@redhat.com>
 
+	PR c++/51416
+	* init.c (build_value_init_noctor): Check for incomplete type.
+
+2011-12-16  Jason Merrill  <jason@redhat.com>
+
 	PR c++/51331
 	* class.c (convert_to_base_statically): Just call
 	build_simple_base_path.
